# internal/api/oas_client_gen.go
@@ -34,6 +34,12 @@ type Invoker interface {
 	//
 	// POST /actions
 	CreateAction(ctx context.Context, request *CreateActionRequest) (CreateActionRes, error)
+	// CreateConversation invokes createConversation operation.
+	//
+	// Create a new conversation.
+	//
+	// POST /conversations
+	CreateConversation(ctx context.Context, request *CreateConversationRequest) (CreateConversationRes, error)
 	// CreatePerson invokes createPerson operation.
 	//
 	// Create a new person.
@@ -207,6 +213,81 @@ func (c *Client) sendCreateAction(ctx context.Context, request *CreateActionRequ
 
 	stage = "DecodeResponse"
 	result, err := decodeCreateActionResponse(resp)
+	if err != nil {
+		return res, errors.Wrap(err, "decode response")
+	}
+
+	return result, nil
+}
+
+// CreateConversation invokes createConversation operation.
+//
+// Create a new conversation.
+//
+// POST /conversations
+func (c *Client) CreateConversation(ctx context.Context, request *CreateConversationRequest) (CreateConversationRes, error) {
+	res, err := c.sendCreateConversation(ctx, request)
+	return res, err
+}
+
+func (c *Client) sendCreateConversation(ctx context.Context, request *CreateConversationRequest) (res CreateConversationRes, err error) {
+	otelAttrs := []attribute.KeyValue{
+		otelogen.OperationID("createConversation"),
+		semconv.HTTPRequestMethodKey.String("POST"),
+		semconv.HTTPRouteKey.String("/conversations"),
+	}
+
+	// Run stopwatch.
+	startTime := time.Now()
+	defer func() {
+		// Use floating point division here for higher precision (instead of Millisecond method).
+		elapsedDuration := time.Since(startTime)
+		c.duration.Record(ctx, float64(elapsedDuration)/float64(time.Millisecond), metric.WithAttributes(otelAttrs...))
+	}()
+
+	// Increment request counter.
+	c.requests.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+
+	// Start a span for this request.
+	ctx, span := c.cfg.Tracer.Start(ctx, CreateConversationOperation,
+		trace.WithAttributes(otelAttrs...),
+		clientSpanKind,
+	)
+	// Track stage for error reporting.
+	var stage string
+	defer func() {
+		if err != nil {
+			span.RecordError(err)
+			span.SetStatus(codes.Error, stage)
+			c.errors.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+		}
+		span.End()
+	}()
+
+	stage = "BuildURL"
+	u := uri.Clone(c.requestURL(ctx))
+	var pathParts [1]string
+	pathParts[0] = "/conversations"
+	uri.AddPathParts(u, pathParts[:]...)
+
+	stage = "EncodeRequest"
+	r, err := ht.NewRequest(ctx, "POST", u)
+	if err != nil {
+		return res, errors.Wrap(err, "create request")
+	}
+	if err := encodeCreateConversationRequest(request, r); err != nil {
+		return res, errors.Wrap(err, "encode request")
+	}
+
+	stage = "SendRequest"
+	resp, err := c.cfg.Client.Do(r)
+	if err != nil {
+		return res, errors.Wrap(err, "do request")
+	}
+	defer resp.Body.Close()
+
+	stage = "DecodeResponse"
+	result, err := decodeCreateConversationResponse(resp)
 	if err != nil {
 		return res, errors.Wrap(err, "decode response")
 	}
