# internal/api/oas_request_encoders_gen.go
@@ -25,6 +25,20 @@ func encodeCreateActionRequest(
 	return nil
 }
 
+func encodeCreateConversationRequest(
+	req *CreateConversationRequest,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := new(jx.Encoder)
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
+
 func encodeCreatePersonRequest(
 	req *CreatePersonRequest,
 	r *http.Request,
